Invert logic of Hamlib 'rigctld' daemon enable
Since 'satnogs-client' version 1.0, 'rigctld' is no longer started by
it. Introduce an inverted logic configuration option and start
'rigctld' by default with sane options.

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/hamlib-utils/handlers/main.yml
+++ b/roles/hamlib-utils/handlers/main.yml
@@ -3,8 +3,8 @@
   systemd:
     daemon_reload: true
     name: 'rigctld'
-    enabled: '{{ hamlib_utils_rig_enabled | default(false) }}'
-    state: '{{ "restarted" if hamlib_utils_rig_enabled | default(false) else "stopped" }}'
+    enabled: '{{ not hamlib_utils_rig_disbled | default(false) }}'
+    state: '{{ "restarted" if not hamlib_utils_rig_disbled | default(false) else "stopped" }}'
   become: true
 - name: Restart rotctld service
   systemd:
