Introduce option to upgrade system packages
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-setup/defaults/main.yml
+++ b/roles/satnogs-setup/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
 satnogs_setup_ansible_url: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
 satnogs_setup_ansible_branch: 'stable'
+satnogs_setup_release_upgrade_enabled: false
