Apply changes for the new gr-soapy and gr-satnogs
Signed-off-by: Manolis Surligas <surligas@gmail.com>
[acinonyx@openwrt.gr: Preserve compatibility with older parameters]
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -66,6 +66,10 @@ satnogs_station_lon: '23.725'
 # iq_dump_filename: Null
 # disable_decoded_data: 0
 
+# satnogs_soapy_rx_device: 'driver=rtlsdr'
+# satnogs_rx_samp_rate: '1e6'
+# satnogs_rx_bandwidth: '2e5'
+
 # rf_sw_cmd_off_int: Null
 # rf_sw_cmd_off_char_seq: Null
 # rf_sw_cmd_on_int: Null
