--- a/roles/satnogs-radio/vars/main.yml
+++ b/roles/satnogs-radio/vars/main.yml
@@ -5,4 +5,5 @@ satnogs_radio_uhd_images_tag: '003.009.005'
 satnogs_radio_packages:
   - 'gr-osmosdr'
   - 'gr-fcdproplus'
+  - 'gr-soapy'
   - 'gr-satnogs={{ satnogs_radio_gr_satnogs_version }}'
