--- a/roles/common/vars/main.yml
+++ b/roles/common/vars/main.yml
@@ -14,6 +14,7 @@ repository_path:
   debian_buster: 'Debian_10'
   raspbian_stretch: 'Raspbian_9.0'
   raspbian_buster: 'Raspbian_10'
+apt_repository_file: 'satnogs.list'
 packages:
   - 'acl'
   - 'rng-tools'
