Add support for setting client log level (fixes #48)
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -79,6 +79,7 @@ satnogs_station_lon: '23.725'
 # satnogs_waterfall_min_value: -100
 # satnogs_waterfall_max_value: -50
 
+# satnogs_log_level: DEBUG
 
 #
 # SatNOGS radio configuration
