Replace satnogs configuration script with 'satnogs-config'
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -17,6 +17,7 @@
 #
 # satnogs_setup_ansible_url: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
 # satnogs_setup_ansible_branch: 'stable'
+# satnogs_setup_satnogs_config_version: '0.1.2'
 
 #
 # SatNOGS client package configuration
