--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,5 @@
 ---
+- import_playbook: commons.yml
 - import_playbook: satnogs-setups.yml
 - import_playbook: satnogs-clients.yml
 - import_playbook: satnogs-radios.yml
