Another attempt to fix multiple execution of common role
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/hamlib-utils.yml
+++ b/hamlib-utils.yml
@@ -1,11 +1,17 @@
 ---
 - hosts: hamlib-utils
   roles:
+    - role: common
+      tags:
+        - common
     - role: hamlib-utils
       tags:
         - hamlib-utils
 - hosts: hamlib_utils
   roles:
+    - role: common
+      tags:
+        - common
     - role: hamlib-utils
       tags:
         - hamlib-utils
