--- a/satnogs-radios.yml
+++ b/satnogs-radios.yml
@@ -1,11 +1,17 @@
 ---
 - hosts: satnogs-radios
   roles:
+    - role: common
+      tags:
+        - common
     - role: satnogs-radio
       tags:
         - satnogs-radio
 - hosts: satnogs_radios
   roles:
+    - role: common
+      tags:
+        - common
     - role: satnogs-radio
       tags:
         - satnogs-radio
