--- a/roles/satnogs-setup/tasks/main.yml
+++ b/roles/satnogs-setup/tasks/main.yml
@@ -63,7 +63,7 @@
   until: res is success
   become: true
   tags:
-    - software
+    - satnogs_setup_software
 - name: Configure satnogs-setup
   template:
     src: 'etc/default/satnogs-setup.j2'
@@ -71,7 +71,7 @@
     mode: 0644
   become: true
   tags:
-    - software
+    - satnogs_setup_software
 - name: Set up inventory
   copy:
     src: 'etc/ansible/hosts'
