--- a/roles/satnogs-setup/tasks/main.yml
+++ b/roles/satnogs-setup/tasks/main.yml
@@ -50,14 +50,14 @@
   with_items: '{{ satnogs_setup_satnogs_config_pypi }}'
 - name: Install satnogs-config
   pip:
-    name: '{{ satnogs_setup_satnogs_config_name }}'
-    version: '{{ satnogs_setup_satnogs_config_version }}'
+    name: '{{ satnogs_setup_satnogs_config_url_unstable if experimental | default(false) else satnogs_setup_satnogs_config_url | default(satnogs_setup_satnogs_config_name) }}'
+    version: '{{ satnogs_setup_satnogs_config_version if satnogs_setup_satnogs_config_url is undefined and not experimental | default(false) else omit }}'
     virtualenv: '{{ satnogs_setup_satnogs_config_venv }}'
     virtualenv_site_packages: true
     virtualenv_python: 'python3'
     editable: false
     extra_args: '--no-deps'
-    state: 'present'
+    state: '{{ "present" if satnogs_setup_satnogs_config_url is undefined and not experimental | default (false) else "forceinstall" }}'
   retries: 3
   register: res
   until: res is success
