Update example configuration with new configuration variables
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -10,6 +10,7 @@
 # apt_repository: 'deb http://download.opensuse.org/repositories/home:/librespace:/satnogs/Raspbian_10 ./'
 # apt_key_url: 'http://download.opensuse.org/repositories/home:/librespace:/satnogs/Raspbian_10/Release.key'
 # apt_key_id: '8BD3901736A40B6C'
+# experimental: true
 
 
 #
@@ -17,6 +18,7 @@
 #
 # satnogs_setup_ansible_url: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
 # satnogs_setup_ansible_branch: 'stable'
+# satnogs_setup_satnogs_config_url: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-config.git@master'
 # satnogs_setup_satnogs_config_version: '0.1.2'
 
 #
