satnogs-setup: Do not allow overriding of unstable Ansible branch variable
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-setup/vars/main.yml
+++ b/roles/satnogs-setup/vars/main.yml
@@ -1,4 +1,5 @@
 ---
+satnogs_setup_ansible_branch_unstable: 'master'
 satnogs_setup_satnogs_config_venv: '/var/lib/satnogs-config'
 satnogs_setup_satnogs_config_name: 'satnogs-config'
 satnogs_setup_satnogs_config_config_file: '/etc/ansible/host_vars/localhost'
