--- a/roles/satnogs-setup/defaults/main.yml
+++ b/roles/satnogs-setup/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-satnogs_setup_ansible_url: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
+satnogs_setup_ansible_url: '{{ satnogs_setup_ansible_url_unstable }}'
 satnogs_setup_ansible_branch: 'stable'
 satnogs_setup_release_upgrade_enabled: false
 satnogs_setup_satnogs_config_version: '0.2.1'
