--- a/roles/satnogs-setup/vars/main.yml
+++ b/roles/satnogs-setup/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 satnogs_setup_ansible_url_unstable: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
 satnogs_setup_ansible_branch_unstable: 'master'
+satnogs_setup_satnogs_config_url_unstable: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-config.git@master'
 satnogs_setup_satnogs_config_venv: '/var/lib/satnogs-config'
 satnogs_setup_satnogs_config_name: 'satnogs-config'
 satnogs_setup_satnogs_config_config_file: '/etc/ansible/host_vars/localhost'
