Introduce 'experimental' flag variable
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
-apt_repository: 'deb http://download.opensuse.org/repositories/home:/librespace:/satnogs{{ "-unstable" if experimental | default(false) else "" }}/{{ repository_path[ansible_lsb.id.lower() ~ "_" ~ ansible_lsb.codename.lower()] }} ./'  # yamllint disable-line rule:line-length
-apt_key_url: 'http://download.opensuse.org/repositories/home:/librespace:/satnogs{{ "-unstable" if experimental | default(false) else "" }}/{{ repository_path[ansible_lsb.id.lower() ~ "_" ~ ansible_lsb.codename.lower()] }}/Release.key'  # yamllint disable-line rule:line-length
+apt_repository: 'deb http://download.opensuse.org/repositories/home:/librespace:/satnogs{{ "-unstable" if experimental else "" }}/{{ repository_path[ansible_lsb.id.lower() ~ "_" ~ ansible_lsb.codename.lower()] }} ./'  # yamllint disable-line rule:line-length
+apt_key_url: 'http://download.opensuse.org/repositories/home:/librespace:/satnogs{{ "-unstable" if experimental else "" }}/{{ repository_path[ansible_lsb.id.lower() ~ "_" ~ ansible_lsb.codename.lower()] }}/Release.key'  # yamllint disable-line rule:line-length
 apt_key_id: '8BD3901736A40B6C'
+experimental: false
