satnogs-radio: Install latest available version when experimental features are requested
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-radio/tasks/main.yml
+++ b/roles/satnogs-radio/tasks/main.yml
@@ -48,7 +48,7 @@
 - name: Install packages
   apt:
     name: '{{ satnogs_radio_packages }}'
-    state: 'present'
+    state: '{{ "latest" if experimental else "present" }}'
   become: true
   register: res
   until: res is success
