--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -44,7 +44,7 @@
   when: ansible_os_family == 'Debian'
   become: true
   tags:
-    - software
+    - apt_software
 - name: Update APT cache
   apt:
     update_cache: true
