--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -5,6 +5,7 @@ satnogs_client_pypi:
   - name: 'satnogsclient'
     state: 'absent'
   - name: 'python-dotenv==0.10.3'
+  - name: 'setuptools==44.0.0'
   - name: 'validators==0.14.1'
 satnogs_client_packages:
   - name: 'virtualenv'
