satnogs-setup: Install missing dependencies
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -10,7 +10,7 @@
   retries: 3
 - name: Install required package for APT
   package:
-    name: 'gpg'
+    name: 'python-apt'
     state: 'present'
   when: ansible_os_family == 'Debian'
   become: true
