--- a/roles/satnogs-setup/vars/main.yml
+++ b/roles/satnogs-setup/vars/main.yml
@@ -7,6 +7,8 @@ satnogs_setup_satnogs_config_venv: '/var/lib/satnogs-config'
 satnogs_setup_satnogs_config_name: 'satnogs-config'
 satnogs_setup_satnogs_config_config_file: '/etc/ansible/host_vars/localhost'
 satnogs_setup_packages:
+  - name: 'python-apt'
+  - name: 'git'
   - name: 'needrestart'
   - name: 'virtualenv'
   - name: 'python3-dialog'
