--- a/roles/satnogs-setup/vars/main.yml
+++ b/roles/satnogs-setup/vars/main.yml
@@ -11,6 +11,7 @@ satnogs_setup_packages:
   - name: 'git'
   - name: 'needrestart'
   - name: 'virtualenv'
+  - name: 'python3-apt'
   - name: 'python3-dialog'
   - name: 'python3-yaml'
 satnogs_setup_satnogs_config_pypi:
