--- a/roles/satnogs-radio/vars/main.yml
+++ b/roles/satnogs-radio/vars/main.yml
@@ -3,6 +3,7 @@ satnogs_radio_blacklist_modules:
   - 'dvb_usb_rtl28xxu'
 satnogs_radio_uhd_images_tag: '003.009.005'
 satnogs_radio_packages:
+  - 'gnuradio'
   - 'gr-osmosdr'
   - 'gr-fcdproplus'
   - 'gr-satnogs{{ "=" ~ satnogs_radio_gr_satnogs_version if not experimental else "" }}'
