--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -33,18 +33,11 @@
   become: true
   register: res_virtualenv_python_version
   changed_when: false
-- name: Check for virtualenv with no access to global site-packages
-  stat:
-    path: '/var/lib/{{ satnogs_client_user }}/lib/python2.7/no-global-site-packages.txt'
-  become: true
-  register: res_no_global
 - name: Remove virtualenv of old Python version
   file:
     path: '/var/lib/{{ satnogs_client_user }}/{{ item }}'
     state: 'absent'
-  when: >-
-    (res_no_global.stat.exists and res_no_global.stat.isreg) or
-    res_system_python_version.stdout != res_virtualenv_python_version.stdout
+  when: res_system_python_version.stdout != res_virtualenv_python_version.stdout
   register: res
   until: res is success
   retries: 3
