satnogs-client: Run client under Python 3
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -2,14 +2,10 @@
 satnogs_client_name: 'satnogs-client'
 satnogs_client_user: 'satnogs'
 satnogs_client_pypi:
-  - name: 'satnogsclient'
-    state: 'absent'
   - name: 'python-dotenv==0.10.3'
-  - name: 'setuptools==44.0.0'
   - name: 'validators==0.14.1'
   - name: 'sentry-sdk==0.14.1'
 satnogs_client_packages:
-  - name: 'virtualenv'
   - name: 'python-dev'
     state: 'absent'
   - name: 'redis-server'
@@ -18,22 +14,20 @@ satnogs_client_packages:
     state: 'absent'
   - name: 'libssl-dev'
     state: 'absent'
-  - name: 'git'
-  - name: 'python-apscheduler'
   - name: 'python-sqlalchemy'
     state: 'absent'
-  - name: 'python-requests'
-  - name: 'python-dateutil'
-  - name: 'python-ephem'
-  - name: 'python-tz'
-  - name: 'python-matplotlib'
-  - name: 'python-numpy'
-  - name: 'python-gps'
-  - name: 'python-typing'
-  - name: 'python-concurrent.futures'
-  - name: 'python-decorator'
-  - name: 'python-funcsigs'
-  - name: 'python-libhamlib2'
+  - name: 'git'
+  - name: 'virtualenv'
+  - name: 'python3-apscheduler'
+  - name: 'python3-requests'
+  - name: 'python3-dateutil'
+  - name: 'python3-ephem'
+  - name: 'python3-tz'
+  - name: 'python3-matplotlib'
+  - name: 'python3-numpy'
+  - name: 'python3-gps'
+  - name: 'python3-decorator'
+  - name: 'python3-libhamlib2'
 satnogs_client_url_unstable: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-client.git@master'
 satnogs_client_state_dir: '/tmp/.satnogs'
 satnogs_client_settings:
