--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -23,8 +23,8 @@
   with_items: '{{ satnogs_client_packages }}'
   notify:
     - Restart satnogs-client service
-- name: Get system Python version  # noqa 306
-  shell: '/usr/bin/python --version 2>&1 | awk ''/^Python/ { print $2 }'''
+- name: Get system Python 3 version  # noqa 306
+  shell: '/usr/bin/python3 --version 2>&1 | awk ''/^Python/ { print $2 }'''
   become: true
   register: res_system_python_version
   changed_when: false
@@ -53,6 +53,7 @@
     name: '{{ item.name }}'
     virtualenv: '/var/lib/{{ satnogs_client_user }}'
     virtualenv_site_packages: true
+    virtualenv_python: 'python3'
     editable: false
     extra_args: '{{ "--no-deps" if (item.state | default("present")) != "absent" else omit }}'
     state: '{{ item.state | default(omit) }}'
@@ -75,6 +76,7 @@
     version: '{{ satnogs_client_version if satnogs_client_url is undefined and not experimental else omit }}'
     virtualenv: '/var/lib/{{ satnogs_client_user }}'
     virtualenv_site_packages: true
+    virtualenv_python: 'python3'
     editable: false
     extra_args: '--no-deps'
     state: '{{ "present" if satnogs_client_url is undefined and not experimental else "forcereinstall" }}'
