--- a/roles/gpsd/tasks/main.yml
+++ b/roles/gpsd/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
 - name: Install gpsd
   package:
-    name: 'gpsd'
+    name: 'gpsd=3.17-7'
+    force: true
     state: 'present'
   become: true
   register: res
@@ -9,7 +10,8 @@
   retries: 3
 - name: Install gpsd clients
   package:
-    name: 'gpsd-clients'
+    name: 'gpsd-clients=3.17-7'
+    force: true
     state: 'present'
   become: true
   register: res
