satnogs-client: Add 'sentry_sdk' PyPI package dependency
This new dependency of satnogs-client was introduced in [1].

[1]: https://gitlab.com/librespacefoundation/satnogs/satnogs-client/-/merge_requests/434

Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -7,6 +7,7 @@ satnogs_client_pypi:
   - name: 'python-dotenv==0.10.3'
   - name: 'setuptools==44.0.0'
   - name: 'validators==0.14.1'
+  - name: 'sentry_sdk~=0.13.2'
 satnogs_client_packages:
   - name: 'virtualenv'
   - name: 'python-dev'
