Pin 'gnuradio' version
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-radio/tasks/main.yml
+++ b/roles/satnogs-radio/tasks/main.yml
@@ -53,6 +53,17 @@
   when: libgnuradio_satnogs_package.changed
   tags:
     - skip_ansible_lint
+- name: Install gnuradio
+  apt:
+    name: 'gnuradio{{ "" if experimental else "=" ~ satnogs_radio_gnuradio_version }}'
+    state: '{{ "latest" if experimental else "present" }}'
+    force: true
+  become: true
+  register: res
+  until: res is success
+  retries: 3
+  tags:
+    - satnogs_radio_software
 - name: Install packages
   apt:
     name: '{{ satnogs_radio_packages }}'
