--- a/roles/satnogs-radio/tasks/main.yml
+++ b/roles/satnogs-radio/tasks/main.yml
@@ -1,17 +1,4 @@
 ---
-- name: Add archive repositories keys
-  apt_key:
-    keyserver: 'pool.sks-keyservers.net'
-    id: '{{ item }}'
-    state: 'present'
-  become: true
-  register: res
-  until: res is success
-  retries: 3
-  with_items:
-    - '8B48AD6246925553'
-    - '7638D0442B90D010'
-  when: ansible_lsb.id in ["Debian", "Raspbian"] and ansible_lsb.codename == "stretch"
 - name: Remove jessie backports repository
   apt_repository:
     repo: 'deb http://ftp.debian.org/debian jessie-backports main'
@@ -98,15 +85,8 @@
     state: 'absent'
   become: true
   with_items: '{{ satnogs_radio_blacklist_modules }}'
-- name: Download UHD images for stretch
-  command: '/usr/bin/uhd_images_downloader'
-  args:
-    creates: '/usr/share/uhd/images/{{ satnogs_radio_uhd_images_tag }}.tag'
-  become: true
-  when: ansible_lsb.id in ["Debian", "Raspbian"] and ansible_lsb.codename == "stretch"
-- name: Download UHD images for buster
+- name: Download UHD images
   command: '/usr/bin/uhd_images_downloader'
   args:
     creates: '/usr/share/uhd/images/inventory.json'
   become: true
-  when: ansible_lsb.id in ["Debian", "Raspbian"] and ansible_lsb.codename == "buster"
