common: Remove APT configuration which disables recommended packages (fixes #28)
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -1,4 +1,10 @@
 ---
+- name: Remove APT configuration disabing recommends
+  file:
+    path: '/etc/apt/apt.conf.d/71-armbian-no-recommends'
+    state: 'absent'
+  when: ansible_os_family == 'Debian'
+  become: true
 - name: Update APT cache
   apt:
     update_cache: true
