common: Fix type on task name
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -1,5 +1,5 @@
 ---
-- name: Remove APT configuration disabing recommends
+- name: Remove APT configuration disabling recommends
   file:
     path: '/etc/apt/apt.conf.d/71-armbian-no-recommends'
     state: 'absent'
