--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -49,6 +49,7 @@ satnogs_client_settings:
   - satnogs_rx_bandwidth
   - satnogs_doppler_corr_per_sec
   - satnogs_lo_offset
+  - satnogs_ppm_error
   - satnogs_rf_gain
   - satnogs_antenna
   - satnogs_dev_args
